--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -115,7 +115,7 @@ EX: if an asset is designed as a 10px by 10px square, we can multiply by pixel s
 body {
 	margin: 0;
 	padding: 0;
-	background-image: linear-gradient(180deg, #5DCBE4 0%, #47BCE4 100%);
+	/* background-image: linear-gradient(180deg, #5DCBE4 0%, #47BCE4 100%); */
 	height: 100%;
    min-height: 100vh;
 	/* padding-top: calc(var(--pixel-size) * 18px); */
@@ -127,6 +127,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-top: 10%;
 }
 .TitleImage {
 	width: calc(var(--pixel-size) * 95px);
